--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.3",
+    "@mui/material": "^5.0.6",
     "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
     "js-cookie": "^3.0.1",
