--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "mongoose": "^6.0.12",
     "next": "12.0.2",
     "next-connect": "^0.11.0",
+    "notistack": "^2.0.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.19.1"
   },
   "devDependencies": {
     "eslint": "7.32.0",
