--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.3",
     "@mui/material": "^5.0.6",
+    "@paypal/react-paypal-js": "^7.4.2",
     "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
     "js-cookie": "^3.0.1",
