--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@paypal/react-paypal-js": "^7.4.2",
     "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^3.6.0",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
@@ -23,6 +24,7 @@
     "next-connect": "^0.11.0",
     "notistack": "^2.0.3",
     "react": "17.0.2",
+    "react-chartjs-2": "^3.3.0",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.19.1"
   },
