--- a/package.json
+++ b/package.json
@@ -16,17 +16,20 @@
     "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
     "chart.js": "^3.6.0",
+    "cloudinary": "^1.27.1",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongoose": "^6.0.12",
+    "multer": "^1.4.3",
     "next": "12.0.2",
     "next-connect": "^0.11.0",
     "notistack": "^2.0.3",
     "react": "17.0.2",
     "react-chartjs-2": "^3.3.0",
     "react-dom": "17.0.2",
-    "react-hook-form": "^7.19.1"
+    "react-hook-form": "^7.19.1",
+    "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "eslint": "7.32.0",
