--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-chartjs-2": "^3.3.0",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.19.1",
+    "react-material-ui-carousel": "^3.0.4",
     "streamifier": "^0.1.1"
   },
   "devDependencies": {
