--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-hook-form": "^7.19.1",
     "react-material-ui-carousel": "^3.0.4",
     "react-redux": "^7.2.6",
+    "redux-logger": "^3.0.6",
     "streamifier": "^0.1.1"
   },
   "devDependencies": {
